# nlin-EEG

./: (OLD)idim.py  (OLD)plotting.py  .aliases  .gitignore  BMtoMNE.py  EEG_Preprocessing.ipynb  README.md  core.py  correlation.py  correxp.py  corrsum.py  delay.py  devenv.nix  devenv.yaml  embedding.csv  epochs.py  functions.py  idim.py  init.py  launch.py  launch.sh  llyap.py  logfit.py  logo.txt  lorenz.py  menu.py  nixosWSL.sh  nlin-EEG.ipynb  noise.py  peaks.py  plateaus.py  plot.py  plotting.py  pyproject.toml  recurrence.py  separation.py  shell-EEG.desktop  spectrum.py  t_plotting.py  toMNE.py
.home/kitty/: kitty.conf  theme.conf
.tmp/: last.json
.tmp/modules/: spectrum.json
BM_CS/: 7_22errslopes.npy  7_22slopes.npy  7_22zscore.npy  FCSums.npy  POCSums.npy  rvals.npy
BM_CS/D2/: 5_28errintercept.npy  5_28errslopes.npy  5_28slopes.npy  5_28zscore.npy  F[5_28]errintercept.npy  F[5_28]errslopes.npy  F[5_28]intercept.npy  F[5_28]slopes.npy  F[5_28]zscore.npy  G[5_28]intercept.npy  PO[5_28]errintercept.npy  PO[5_28]errslopes.npy  PO[5_28]intercept.npy  PO[5_28]slopes.npy  (+1 more)
Compute/: .aliases  BRCFS_Nlin_singletrial.ipynb  README.md  clst.json  core.py  init.py  logo.txt  menu.py  museum.py  nb.py  nlin-EEG.ipynb  parallelizer.py  run.py  style.py  t_plotting.py
cython_modules/: c_core.pyx  c_rec.pyx  cython_setup.py  recurrence_setup.py
makedata/: toMNE.py
modules/: correxp.py  corrsum.py  evokeds.py  llyap.py  persistence.py  recurrence.py  spectrum.py
nixosWSL/: flake.nix  nixosWSL.nix  nixosWSL.sh
plotting/: basic.json  plot.py  wrappers.py
(+92 files in other folders)
